--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,8 +4,24 @@
     background-color: lightblue;
     border-radius: 15px; /* Adjust the value for desired roundness */
 }
+
 .nav-bg-color {
-    width: 90%;
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center; /* Centers vertically */
+    height: 100vh; /* Full viewport height */
+    border: 1px solid black;
+    position: relative;
+    width: 100%;
     height: 50px;
-    background-color:#54acac; /* White background for the nav bar */
+    background-color: #ffffff; /* White background for the nav bar */
+    display: flex;
+    align-items: center; /* Center content vertically */
+    justify-content: center; /* Center content horizontally */
+}
+/*.nav-bg-color {
+    position: center;
+    width: 100%;
+    height: 50px;
+    background-color: #ffffff; /* White background for the nav bar */
 }
