--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,23 +1,29 @@
 .main-body {
     width: 95%;
     height: 96%;
-    background-color: lightblue;
+    background-color: gray;
     border-radius: 15px; /* Adjust the value for desired roundness */
 }
 
 .nav-bg-color {
-    display: flex;
-    justify-content: center; /* Centers horizontally */
-    align-items: center; /* Centers vertically */
-    height: 100vh; /* Full viewport height */
-    border: 1px solid black;
     position: relative;
     width: 100%;
     height: 50px;
     background-color: #ffffff; /* White background for the nav bar */
     display: flex;
     align-items: center; /* Center content vertically */
-    justify-content: center; /* Center content horizontally */
+    justify-content:center; /* Center content horizontally */
+}
+.main-btn {
+    height: 30px;
+    position: absolute;
+    left: 10px; /* Adjust as needed */
+    top: 27%; /* Center vertically */
+    transform: translateY(-50%); /* Adjust for exact centering */
+    background-color: transparent; /* Transparent background */
+    border: 30px; /* No border */
+    border-color: black;
+    cursor: pointer; /* Pointer cursor on hover */
 }
 /*.nav-bg-color {
     position: center;
